feat: comprehensive UI modernization and architecture overhaul
- Integrate Tailwind CSS with proper configuration
- Implement modular component architecture with reusable UI components
- Enhance dashboard with new investment features and notifications
- Add tabbed interface for account settings (profile, security, payment)
- Implement Redux state management with dedicated slices
- Create service layer for API, crypto, websocket and trading functionality
- Improve user authentication flow and protected routes
- Restructure CSS organization for better maintainability

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/src/assets/images/favicon-16x16.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title> Fidelity First Brokers</title>
+    <link rel="preconnect" href="https://s3.tradingview.com">
+    <link rel="preconnect" href="https://www.tradingview.com">
+    <script src="https://cdn.tailwindcss.com"></script>
     <!-- <script src="//code.jivosite.com/widget/zhiNRy6siy" defer></script> -->
   </head>
   <body>
